[gd_scene load_steps=8 format=2]

[ext_resource path="res://Enemy2.gd" type="Script" id=1]
[ext_resource path="res://EnemyPath.gd" type="Script" id=2]
[ext_resource path="res://resources/fire_rock_enemy.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 37.4667, 16.4689 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 50.187, 29.75 )

[sub_resource type="CircleShape2D" id=4]
radius = 478.516

[sub_resource type="NavigationPolygon" id=5]
vertices = PoolVector2Array( 697.83, 1750.95, 1071.4, 1780.63, -30.299, 1700.25, -95.0776, 1682.57, -540.956, 1662.42, -496.869, 1658.52, 1624.61, -68.1382, 1539.5, 1321.98, 935.083, 963.086, 926.477, 792.145, 697.83, 1715.13, 688.877, 1200.34, 850.03, 945.181, 688.404, -607.166, 854.626, 568.301, 663.943, 402.49, 677.761, 631.862, -434.817, 1111.67, -425.072, 636.091, 590.395, 381.145, 529.351, 1039.9, 448.256, 1025.71, 460.577, 958.61, 760.666, 789.382, 763.43, 391.436, 691.578, 391.436, 694.342, -14.8002, -590.743, 721.85, -518.627, 721.85, -518.627, 1025.91, -592.692, 1043.45, 451.153, -75.5975, -510.831, 636.091, -512.056, 559.555, 368.248, -155.739, 434.572, -158.503, 616.964, -12.0367, 611.437, -81.1246, 346.14, -230.354, -588.449, 555.231, -588.449, 399.56, 274.288, -241.408, 520.241, 73.6321, 603.146, 81.9227, 509.187, -75.5975, 448.39, -246.935, 379.302, -255.226, 382.065, -318.787, -1358.95, 1563.13, -666.757, 558.128, -594.641, 562.026, -725.003, 1636.57, -125.841, 1289.87, -508.882, 1121.41, -36.2841, 1193.98, 598.281, 1114.91, 533.405, 1110.86, 48.8652, 1120.99, 38.7284, 1193.98, -752.949, 158.078, -831.238, 154.259, -838.876, 77.8801, 763.43, 648.443, 214.371, 958.61, -674.66, 316.565, 210.727, -318.787, 268.761, -313.26, -665.113, 391.035, 290.869, -412.746, 213.491, -418.273, 194.146, -592.374, 771.72, 557.247, 191.383, -393.401, -745.311, 307.018, 127.822, -396.165, 865.68, 783.855, 545.112, -86.6516, 536.822, -161.266, 453.916, -177.848, 288.106, -340.895, -1013.79, -559.882, 44.9166, -573.03, -833.147, 316.565, -762.496, 318.475, -749.13, 396.764, -1623.74, 806.599, -677.816, 406.767, -905.708, 236.367, -840.785, 244.005, 129.96, 1041.93, 121.85, 1112.88, -915.255, 77.8801, -1563.45, -244.172, -594.641, 1509.28, -663.893, 1615.14, 622.609, 1179.79, -46.4209, 1271.02, -639.47, 1643.76, 202.945, 1025.71 )
polygons = [ PoolIntArray( 0, 1, 2 ), PoolIntArray( 3, 0, 2, 4, 5 ), PoolIntArray( 6, 7, 1, 8, 9 ), PoolIntArray( 8, 1, 0, 10 ), PoolIntArray( 8, 10, 11, 12 ), PoolIntArray( 13, 6, 9, 14 ), PoolIntArray( 15, 16, 17, 18, 19 ), PoolIntArray( 20, 21, 22, 23 ), PoolIntArray( 24, 25, 26 ), PoolIntArray( 27, 28, 29, 30 ), PoolIntArray( 31, 18, 32, 33, 34, 35 ), PoolIntArray( 26, 36, 37, 13 ), PoolIntArray( 38, 34, 33, 39, 40, 41 ), PoolIntArray( 42, 43, 19, 18 ), PoolIntArray( 31, 44, 42, 18 ), PoolIntArray( 45, 46, 47, 13 ), PoolIntArray( 48, 49, 50, 27, 30, 51 ), PoolIntArray( 52, 5, 53, 17, 54 ), PoolIntArray( 55, 56, 20, 23, 12 ), PoolIntArray( 57, 58, 54, 17 ), PoolIntArray( 59, 60, 61 ), PoolIntArray( 17, 16, 62, 23, 63 ), PoolIntArray( 64, 65, 66, 41, 40, 67 ), PoolIntArray( 68, 69, 70, 13 ), PoolIntArray( 14, 71, 24 ), PoolIntArray( 72, 65, 64, 73, 59, 74 ), PoolIntArray( 9, 75, 14 ), PoolIntArray( 13, 14, 24, 26 ), PoolIntArray( 13, 37, 76, 77 ), PoolIntArray( 13, 77, 78, 45 ), PoolIntArray( 47, 79, 68, 13 ), PoolIntArray( 80, 13, 70 ), PoolIntArray( 80, 70, 81 ), PoolIntArray( 82, 83, 84, 48, 85 ), PoolIntArray( 84, 86, 49, 48 ), PoolIntArray( 87, 88, 82, 85 ), PoolIntArray( 89, 90, 57, 17 ), PoolIntArray( 80, 81, 74, 59, 61 ), PoolIntArray( 80, 61, 91, 92 ), PoolIntArray( 85, 92, 91, 87 ), PoolIntArray( 51, 30, 93, 94 ), PoolIntArray( 12, 11, 95, 55 ), PoolIntArray( 54, 96, 52 ), PoolIntArray( 51, 94, 97 ), PoolIntArray( 4, 51, 97, 5 ), PoolIntArray( 52, 3, 5 ), PoolIntArray( 63, 98, 89, 17 ), PoolIntArray( 63, 23, 22 ) ]
outlines = [ PoolVector2Array( -1563.45, -244.172, -1013.79, -559.882, 688.404, -607.166, 1624.61, -68.1382, 1539.5, 1321.98, 1071.4, 1780.63, -30.299, 1700.25, -540.956, 1662.42, -725.003, 1636.57, -1358.95, 1563.13, -1623.74, 806.599 ), PoolVector2Array( -496.869, 1658.52, -508.882, 1121.41, -434.817, 1111.67, -425.072, 636.091, -510.831, 636.091, -512.056, 559.555, -588.449, 555.231, -588.449, 399.56, -665.113, 391.035, -674.66, 316.565, -745.311, 307.018, -752.949, 158.078, -831.238, 154.259, -838.876, 77.8801, -915.255, 77.8801, -905.708, 236.367, -840.785, 244.005, -833.147, 316.565, -762.496, 318.475, -749.13, 396.764, -677.816, 406.767, -666.757, 558.128, -594.641, 562.026, -590.743, 721.85, -518.627, 721.85, -518.627, 1025.91, -592.692, 1043.45, -594.641, 1509.28, -663.893, 1615.14, -639.47, 1643.76 ), PoolVector2Array( 44.9166, -573.03, 127.822, -396.165, 191.383, -393.401, 210.727, -318.787, 268.761, -313.26, 274.288, -241.408, 346.14, -230.354, 368.248, -155.739, 434.572, -158.503, 451.153, -75.5975, 509.187, -75.5975, 520.241, 73.6321, 603.146, 81.9227, 590.395, 381.145, 663.943, 402.49, 677.761, 631.862, 763.43, 648.443, 760.666, 789.382, 850.03, 945.181, 935.083, 963.086, 926.477, 792.145, 865.68, 783.855, 854.626, 568.301, 771.72, 557.247, 763.43, 391.436, 691.578, 391.436, 694.342, -14.8002, 616.964, -12.0367, 611.437, -81.1246, 545.112, -86.6516, 536.822, -161.266, 453.916, -177.848, 448.39, -246.935, 379.302, -255.226, 382.065, -318.787, 288.106, -340.895, 290.869, -412.746, 213.491, -418.273, 194.146, -592.374 ), PoolVector2Array( -95.0776, 1682.57, -125.841, 1289.87, -46.4209, 1271.02, -36.2841, 1193.98, 38.7284, 1193.98, 48.8652, 1120.99, 121.85, 1112.88, 129.96, 1041.93, 202.945, 1025.71, 214.371, 958.61, 460.577, 958.61, 448.256, 1025.71, 529.351, 1039.9, 533.405, 1110.86, 598.281, 1114.91, 622.609, 1179.79, 688.877, 1200.34, 697.83, 1715.13, 697.83, 1750.95 ) ]

[node name="EnemyPath" type="Navigation2D"]
script = ExtResource( 2 )

[node name="Enemy" type="KinematicBody2D" parent="." groups=["destroyable"]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Enemy"]
scale = Vector2( 5, 5 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy"]
position = Vector2( -0.462646, -3.864 )
shape = SubResource( 3 )

[node name="Hitbox" type="Area2D" parent="Enemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/Hitbox"]
position = Vector2( 0.89418, -0.0878143 )
shape = SubResource( 6 )

[node name="DetectArea" type="Area2D" parent="Enemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/DetectArea"]
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="Enemy"]
wait_time = 5.0
autostart = true

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="."]
position = Vector2( 511.359, 1.26666 )
navpoly = SubResource( 5 )

[node name="Line2D" type="Line2D" parent="."]
visible = false

[connection signal="tree_exiting" from="Enemy" to="." method="_on_Enemy_tree_exiting"]
[connection signal="body_entered" from="Enemy/Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="Enemy/Hitbox" to="Enemy" method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="Enemy/DetectArea" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Enemy/DetectArea" to="Enemy" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Enemy/Timer" to="Enemy" method="_on_Timer_timeout"]
